k8s/auburntech/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auburntech
  namespace: auburntech-dmz
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: website-port
  selector:
    app: auburntech
  sessionAffinity: None
  type: ClusterIP
