k8s/auburntech/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auburntech-gateway
  namespace: auburntech-dmz
spec:
  parentRefs:
  - name: gateway-external
    namespace: gateway
    sectionName: auburntech-net
  hostnames:
  - "www.auburntechconsulting.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: auburntech
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auburntech-root-gateway
  namespace: auburntech-dmz
spec:
  parentRefs:
  - name: gateway-external
    namespace: gateway
    sectionName: auburntech-net-root
  hostnames:
  - "auburntechconsulting.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: auburntech
      port: 8080
